hphp/hack/test/typecheck/new_inference/eager_solve/array_append_bad.php.exp
File "array_append_bad.php", line 32, characters 16-20:
Invalid argument (Typing[4110])
  File "array_append_bad.php", line 11, characters 23-28:
  This is a string
  File "array_append_bad.php", line 22, characters 9-11:
  It is incompatible with an int
File "array_append_bad.php", line 35, characters 16-20:
Invalid argument (Typing[4110])
  File "array_append_bad.php", line 11, characters 23-28:
  This is a string
  File "array_append_bad.php", line 23, characters 7-9:
  It is incompatible with an int
File "array_append_bad.php", line 37, characters 3-18:
Invalid assignment (Typing[4110])
  File "array_append_bad.php", line 24, characters 10-12:
  This is a num (int/float)
  File "array_append_bad.php", line 37, characters 15-18:
  It is incompatible with a bool
File "array_append_bad.php", line 39, characters 3-15:
Invalid assignment (Typing[4110])
  File "array_append_bad.php", line 26, characters 7-9:
  This is an int
  File "array_append_bad.php", line 39, characters 12-15:
  It is incompatible with a bool
File "array_append_bad.php", line 41, characters 3-21:
Invalid assignment (Typing[4110])
  File "array_append_bad.php", line 27, characters 11-13:
  This is a num (int/float)
  File "array_append_bad.php", line 41, characters 18-20:
  It is incompatible with a string
File "array_append_bad.php", line 42, characters 3-21:
Invalid assignment (Typing[4110])
  File "array_append_bad.php", line 27, characters 7-9:
  This is an int
  File "array_append_bad.php", line 42, characters 15-17:
  It is incompatible with a string
